# bako

./: .gitmodules  README.org
modules/aoi/: .gitignore  CMakeLists.txt
modules/aoi/include/aoi/: aoi.hh  injector.hh  log.hh  task.hh  work_group.hh
modules/aoi/src/: injector.cc  log.cc  main.cc  task.cc  work_group.cc
